# datacheck

./: .gitignore  .pre-commit-config.yaml  404.html  AUTOMATED_RELEASE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  PR_DESCRIPTION.md  PYPI_RELEASE_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_WORKFLOWS.md  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: auto-release.yml  ci.yml  docs.yml  pr-version-check.yml  release.yml
changelog/: index.html
contributing/: index.html
datacheck/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  loader.py  output.py  results.py  rules.py
development/: index.html
docs/: .gitkeep  changelog.md  contributing.md  development.md  index.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css
docs/examples/: basic.md  cicd.md  csv.md  database.md  parquet.md  quick-start.md  real-world.md
docs/getting-started/: first-validation.md  installation.md  quick-start.md
docs/guide/: configuration.md  data-formats.md  getting-started.md  installation.md  validation-rules.md
docs/integration/: cicd.md  data-pipelines.md  github-actions.md  pre-commit.md  python.md
docs/reference/: cli.md  config-schema.md  config.md  exit-codes.md  python-api.md
docs/use-cases/: index.md
docs/user-guide/: configuration.md  exit-codes.md  output-formats.md  overview.md  validation-rules.md
examples/: README.md
examples/advanced/: README.md  customer_data.csv  customer_data_with_errors.csv  validation_config.yaml
examples/basic/: README.md  index.html  sample_data.csv  validation_config.yaml
examples/csv/: index.html
examples/database/: index.html
examples/database-example/: README.md  orders.db  validate_orders.py  validation_config.yaml
examples/parquet/: index.html
examples/parquet-example/: README.md  product_inventory.parquet  validation_config.yaml
examples/real-world/: README.md  index.html  sales_data.csv  sales_validation.yaml  user_data.csv  user_validation.yaml
getting-started/first-validation/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
integration/cicd/: index.html
integration/data-pipelines/: index.html
integration/github-actions/: index.html
integration/pre-commit/: index.html
integration/python/: index.html
reference/cli/: index.html
reference/config-schema/: index.html
reference/python-api/: index.html
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  helpers.py  test_cli.py  test_config.py  test_engine.py  test_loader.py  test_output.py  test_results.py  test_rules.py
user-guide/configuration/: index.html
user-guide/exit-codes/: index.html
user-guide/output-formats/: index.html
user-guide/overview/: index.html
user-guide/validation-rules/: index.html
